--- a/HotelPtyxiaki/HotelPtyxiaki/Views/PageRoomService.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/PageRoomService.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HotelPtyxiaki.Views.PageRoomService">
     <RelativeLayout Padding="0">
-        <Image x:Name="ImgBackground" HorizontalOptions="Fill"  VerticalOptions="FillAndExpand" Aspect="AspectFill" Source="Assets/backgroundroomservice.png" HeightRequest="750" ></Image>
+        <Image x:Name="ImgBackground" HorizontalOptions="Fill"  VerticalOptions="FillAndExpand" Aspect="AspectFill" Source="Assets/backgroundroomservice.png" HeightRequest="750" Margin="-10,-15,0,0" ></Image>
     </RelativeLayout>
 </ContentPage>
