added icons on rate us

--- a/HotelPtyxiaki/HotelPtyxiaki/AppShell.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/AppShell.xaml
@@ -111,7 +111,7 @@
         </Shell.ItemTemplate>
         <ShellContent Route="PageRestaurant" ContentTemplate="{DataTemplate local:PageRestaurant}" />
     </FlyoutItem>
-    <FlyoutItem Title="Cleaning Service" Icon="cleaning144.png">
+    <FlyoutItem Title="Cleaning" Icon="cleaning144.png">
         <Shell.ItemTemplate>
             <DataTemplate>
                 <Grid>
@@ -123,6 +123,17 @@
         <ShellContent Route="PageCleaningService" ContentTemplate="{DataTemplate local:PageCleaningService}" />
     </FlyoutItem>
     <FlyoutItem Title="About" Icon="about144.png">
+        <Shell.ItemTemplate>
+            <DataTemplate>
+                <Grid>
+                    <Image Source="{Binding Icon}" Margin="5,10,0,0" HeightRequest="45" HorizontalOptions="Start" />
+                    <Label Text="{Binding Title}" Margin="100,10,0,0" VerticalTextAlignment="Center" HorizontalTextAlignment="Start" TextColor="Black" FontSize="20"  />
+                </Grid>
+            </DataTemplate>
+        </Shell.ItemTemplate>
+        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
+    </FlyoutItem>
+    <FlyoutItem Title="Rate Us" Icon="rate144.png">
         <Shell.ItemTemplate>
             <DataTemplate>
                 <Grid>
