--- a/HotelPtyxiaki/HotelPtyxiaki/Views/PageCleaningService.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/PageCleaningService.xaml
@@ -4,28 +4,27 @@
              x:Class="HotelPtyxiaki.Views.PageCleaningService">
     <RelativeLayout Padding="0">
         <Image x:Name="ImgClean"  Aspect="AspectFill" Source="Assets/closedclean.png" RelativeLayout.WidthConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0,-10,0,0"></Image>
-        <StackLayout>
-                <Label Text="Do you need Cleaning Service?" FontSize="20" HorizontalOptions="CenterAndExpand" />
+        <StackLayout RelativeLayout.WidthConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}">
+                <Label Text="Do you need Cleaning Service?" FontSize="24" TextColor="Black" HorizontalOptions="Center" />
                 <!-- VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" /> -->
-            <Switch x:Name="SwitchEnabled" HeightRequest="70" WidthRequest="70" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" IsVisible="True" Toggled="CheckImageClicked" />
-            <StackLayout WidthRequest="500" HeightRequest="155">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label x:Name="LblSpecificTime" Margin="30" Text="Specific Time" TextColor="Black" FontSize="20"/>
-                    <Button Text="Add"  Margin="60"  HeightRequest="40" WidthRequest="200" Clicked="SpecificDateTimeClicked" />
-                    <DatePicker x:Name ="datePicker" Margin="70" IsVisible="false"  DateSelected="SpecificDateSelected"/>
-                    <TimePicker x:Name="timePicker" Margin="80" IsVisible="false"   Unfocused="SpecificTimeSelected"/>
-                </Grid>
-            </StackLayout>
-            <StackLayout>
-                <ScrollView VerticalScrollBarVisibility="Default">
-                    <Grid x:Name="GridSpecificDateTimes"></Grid>
-                </ScrollView>
-            </StackLayout>
+            <Switch x:Name="SwitchEnabled" HorizontalOptions="Center" IsVisible="True" Toggled="CheckImageClicked"  />
+            <Label x:Name="LblSpecificTime" Text="Specific Time" TextColor="Black" FontSize="24"/>
+            <Button Text="Add" Clicked="SpecificDateTimeClicked" />
+            <DatePicker x:Name ="datePicker" Margin="70" IsVisible="false"  DateSelected="SpecificDateSelected"/>
+            <TimePicker x:Name="timePicker" Margin="80" IsVisible="false"   Unfocused="SpecificTimeSelected"/>
+                <StackLayout>
+                    <ScrollView VerticalScrollBarVisibility="Default">
+                        <Grid x:Name="GridSpecificDateTimes"></Grid>
+                    </ScrollView>
+                </StackLayout>
+            <Button Text="Submit"></Button>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+            </Grid>
         </StackLayout>
         </RelativeLayout>
 </ContentPage>
