--- a/HotelPtyxiaki/HotelPtyxiaki/Views/AboutPage.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/AboutPage.xaml
@@ -4,11 +4,11 @@
              x:Class="HotelPtyxiaki.Views.AboutPage"
              xmlns:vm="clr-namespace:HotelPtyxiaki.ViewModels"
              Title="{Binding Title}">
-    
+
     <ContentPage.BindingContext>
         <vm:AboutViewModel />
     </ContentPage.BindingContext>
-    
+
     <ContentPage.Resources>
         <ResourceDictionary>
             <Color x:Key="Accent">#96d1ff</Color>
@@ -16,7 +16,7 @@
     </ContentPage.Resources>
 
     <Grid>
-        <Image x:Name="AboutImage" HorizontalOptions="Fill"  VerticalOptions="FillAndExpand" Aspect="AspectFill" Source="Assets/about.png" HeightRequest="750" Margin="-10,-15,0,0" ></Image>
+        <Image x:Name="AboutImage" HorizontalOptions="Fill"  VerticalOptions="FillAndExpand" Aspect="AspectFill" Source="Assets/aboutnew.png" HeightRequest="750" Margin="-10,-15,0,0" ></Image>
     </Grid>
 
 </ContentPage>
