--- a/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/HomePage.xaml
@@ -5,13 +5,15 @@
     <ScrollView HeightRequest="3000">
         <StackLayout>
             <Image WidthRequest="600" HeightRequest="200" Source="Assets/applogo.png" Aspect="AspectFill"> </Image>
-            <Image WidthRequest="600" HeightRequest="150" Source="Assets/receptionbackground.png" Aspect="AspectFill">
+            <Label Text="Reception" FontSize="24" HorizontalOptions="Center"></Label>
+            <Image WidthRequest="600" HeightRequest="150" Source="Assets/rate_us.png" Aspect="AspectFill">
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer
                 Tapped="ReceptionImageClicked"
                 NumberOfTapsRequired="1" />
                 </Image.GestureRecognizers>
             </Image>
+            <Label Text="Restaurant" FontSize="24" HorizontalOptions="Center"></Label>
             <Image WidthRequest="600" HeightRequest="150" Source="Assets/restaurantbackground.png" Aspect="AspectFill">
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer
@@ -19,6 +21,7 @@
                 NumberOfTapsRequired="1" />
                 </Image.GestureRecognizers>
             </Image>
+            <Label Text="Cleaning" FontSize="24" HorizontalOptions="Center"></Label>
             <Image WidthRequest="600" HeightRequest="150" Source="Assets/openclean.png" Aspect="AspectFill">
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer
@@ -26,14 +29,16 @@
                 NumberOfTapsRequired="1" />
                 </Image.GestureRecognizers>
             </Image>
-            <Image WidthRequest="600" HeightRequest="150" Source="Assets/about.png" Aspect="AspectFill">
+            <Label Text="About" FontSize="24" HorizontalOptions="Center"></Label>
+            <Image WidthRequest="600" HeightRequest="150" Source="Assets/aboutnew.png" Aspect="AspectFill">
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer
                 Tapped="AboutImageClicked"
                 NumberOfTapsRequired="1" />
                 </Image.GestureRecognizers>
             </Image>
-            <Image WidthRequest="600" HeightRequest="150" Source="Assets/rate_us.png" Aspect="AspectFill">
+            <Label Text="Rate Us" FontSize="24" HorizontalOptions="Center"></Label>
+            <Image WidthRequest="600" HeightRequest="150" Source="Assets/about.png" Aspect="AspectFill">
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer
                 Tapped="RateImageClicked"
