--- a/HotelPtyxiaki/HotelPtyxiaki/Views/PageReception.xaml
+++ b/HotelPtyxiaki/HotelPtyxiaki/Views/PageReception.xaml
@@ -6,10 +6,10 @@
         <Image x:Name="ImgReceptionBackground" HorizontalOptions="Fill"  VerticalOptions="FillAndExpand" Aspect="AspectFill" Source="Assets/receptionbackground.png" HeightRequest="870" Margin="-10,-15,0,-15" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}"></Image>
         <StackLayout Padding="0" Margin="0,40,0,0" VerticalOptions="Center" HorizontalOptions="Start" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint= "{ConstraintExpression Type=RelativeToParent, Property=Height}">
                 <Label x:Name="LblHotelName" Margin="20,0,0,0" Text="Hotel Tsamis" TextColor="White" FontAttributes="Bold" FontSize="Title" HorizontalOptions="Center" HorizontalTextAlignment="Center" />
-                <Label x:Name="LblWelcome" Margin="0,0,0,0" Text="Welcome to reception service! From here you can call reception, view hotel's email and hotel's address" TextColor="White" FontSize="Body" HorizontalOptions="Center" HorizontalTextAlignment="Center" />
+                <Label x:Name="LblWelcome" Margin="0,0,0,0" Text="Welcome to reception service! From3 here you can call reception, view hotel's email and hotel's address" TextColor="White" FontSize="Body" HorizontalOptions="Center" HorizontalTextAlignment="Center" />
                 <Label x:Name="LblHotelAddress" Margin="20,0,0,0" Text="Kastoria Entry" TextColor="White" FontAttributes="Bold" FontSize="Title" HorizontalOptions="Center" HorizontalTextAlignment="Center" />
                 <Label x:Name="LblHotelEmail" Margin="20,0,0,0" Text="Ptyxiaki@gmail.com" TextColor="White" FontAttributes="Bold" FontSize="Title" HorizontalOptions="Center" HorizontalTextAlignment="Center" />
-               <Button x:Name="BtnCallReception" Margin="10,430,0,0" Text="📞 Call Reception" Font="24" BorderWidth="1" HorizontalOptions="Center" VerticalOptions="End" Clicked="BtnCallReceptionClicked" />
+                <Button x:Name="BtnCallReception" Margin="10,430,0,0" Text="📞 Call Reception" Font="24" BorderWidth="1" HorizontalOptions="Center" VerticalOptions="End" Clicked="BtnCallReceptionClicked" />
         </StackLayout>
     </RelativeLayout>
 </ContentPage>
